@@ -65,6 +65,8 @@ from io import BytesIO
 _Debug = False
 _DebugLevel = 10
 
+_PacketLogFileEnabled = True
+
 #------------------------------------------------------------------------------
 
 import re
@@ -615,6 +617,11 @@ class ProxyReceiver(automat.Automat):
         if _Debug:
             lg.out(_DebugLevel, '<<<Relay-IN %s from %s://%s with %d bytes' % (
                 str(routed_packet), info.proto, info.host, len(data)))
+        if _PacketLogFileEnabled:
+            lg.out(0, '  \033[0;49;36m RELAY_IN %s(%s) with %d bytes from %s to %s TID:%s\033[0m' % (
+                routed_packet.Command, routed_packet.PacketID, info.bytes_received,
+                global_id.UrlToGlobalID(info.sender_idurl), global_id.UrlToGlobalID(routed_packet.RemoteID),
+                info.transfer_id), log_name='packet', showtime=True)
         if routed_packet.Command == commands.Identity():
             if _Debug:
                 lg.out(_DebugLevel, '    found identity in relay packet %s' % routed_packet)
